...
        }

        workspaceMenuItem.submenu = workspaceMenu
        mainMenu.addItem(workspaceMenuItem)

        let paneMenuItem = NSMenuItem()
        let paneMenu = NSMenu(title: "Pane")

        let splitRightMenuItem = NSMenuItem(
            title: "Split Right",
            action: #selector(splitPaneRightFromMenu(_:)),
            keyEquivalent: ""
        )
        splitRightMenuItem.target = self
        paneMenu.addItem(splitRightMenuItem)

...
            keyEquivalent: ""
        )
        splitDownMenuItem.target = self
        paneMenu.addItem(splitDownMenuItem)

        let removePaneMenuItem = NSMenuItem(
            title: "Remove Active Pane",
            action: #selector(removeActivePaneFromMenu(_:)),
            keyEquivalent: ""
        )
        removePaneMenuItem.target = self
        paneMenu.addItem(removePaneMenuItem)
        paneMenu.addItem(.separator())

        let createPaneTabMenuItem = NSMenuItem(
            title: "New Pane Tab",
            action: #selector(createPaneTabFromMenu(_:)),
            keyEquivalent: ""
        )
        createPaneTabMenuItem.target = self
        paneMenu.addItem(createPaneTabMenuItem)

...
            keyEquivalent: ""
        )
        createWorktreePaneTabMenuItem.target = self
        paneMenu.addItem(createWorktreePaneTabMenuItem)

        let closePaneTabMenuItem = NSMenuItem(
            title: "Close Pane Tab",
            action: #selector(closePaneTabFromMenu(_:)),
            keyEquivalent: ""
        )
        closePaneTabMenuItem.target = self
        paneMenu.addItem(closePaneTabMenuItem)

...
